[package]
name = "rsmap"
version = "0.1.0"
edition = "2021"
description = "Nmap-like port scanner with AI explanations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rustmap"
keywords = ["nmap", "scanner", "ai", "security", "rust"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
pnet = "0.34"
gemini-rust = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"